[gd_scene load_steps=63 format=3 uid="uid://byg70l4n10ap6"]

[ext_resource type="Script" uid="uid://dnx4oxla2bqjb" path="res://assets/scripts/player.gd" id="1_8afob"]
[ext_resource type="Texture2D" uid="uid://chgobduq54syc" path="res://assets/sprites/player/Double Jump (32x32).png" id="2_dovo2"]
[ext_resource type="Texture2D" uid="uid://csr4xeux6u6bq" path="res://assets/sprites/player/Fall (32x32).png" id="3_75vfm"]
[ext_resource type="Texture2D" uid="uid://bmc0t44rmw18h" path="res://assets/sprites/player/Hit (32x32).png" id="4_0owmy"]
[ext_resource type="Texture2D" uid="uid://c1vgsqewnpky5" path="res://assets/sprites/player/Idle (32x32).png" id="5_qek5x"]
[ext_resource type="Texture2D" uid="uid://cpyqi46807xdd" path="res://assets/sprites/player/Jump (32x32).png" id="6_0owmy"]
[ext_resource type="Texture2D" uid="uid://cdnf57ue6ty2o" path="res://assets/sprites/player/Run (32x32).png" id="6_5gtgg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dovo2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8afob"]
size = Vector2(21.25, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_h17s1"]
atlas = ExtResource("2_dovo2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_je7p5"]
atlas = ExtResource("2_dovo2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fm80t"]
atlas = ExtResource("2_dovo2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx1jg"]
atlas = ExtResource("2_dovo2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugbui"]
atlas = ExtResource("2_dovo2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcs02"]
atlas = ExtResource("2_dovo2")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_myrg7"]
atlas = ExtResource("2_dovo2")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvlxm"]
atlas = ExtResource("3_75vfm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf5tr"]
atlas = ExtResource("4_0owmy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgqa7"]
atlas = ExtResource("4_0owmy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ydkj"]
atlas = ExtResource("4_0owmy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j4b4"]
atlas = ExtResource("4_0owmy")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yj68g"]
atlas = ExtResource("4_0owmy")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioxgp"]
atlas = ExtResource("4_0owmy")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cnsyf"]
atlas = ExtResource("4_0owmy")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_007i1"]
atlas = ExtResource("5_qek5x")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cv16"]
atlas = ExtResource("5_qek5x")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4nxn"]
atlas = ExtResource("5_qek5x")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_28m0y"]
atlas = ExtResource("5_qek5x")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uniwh"]
atlas = ExtResource("5_qek5x")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqsei"]
atlas = ExtResource("5_qek5x")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tffgl"]
atlas = ExtResource("5_qek5x")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk8ii"]
atlas = ExtResource("5_qek5x")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mf0n"]
atlas = ExtResource("5_qek5x")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hvnv"]
atlas = ExtResource("5_qek5x")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbmj2"]
atlas = ExtResource("5_qek5x")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qek5x"]
atlas = ExtResource("6_0owmy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxw46"]
atlas = ExtResource("6_5gtgg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qxvo"]
atlas = ExtResource("6_5gtgg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q8fn"]
atlas = ExtResource("6_5gtgg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wva7c"]
atlas = ExtResource("6_5gtgg")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7obkq"]
atlas = ExtResource("6_5gtgg")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vo27k"]
atlas = ExtResource("6_5gtgg")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_genst"]
atlas = ExtResource("6_5gtgg")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_niom3"]
atlas = ExtResource("6_5gtgg")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttakn"]
atlas = ExtResource("6_5gtgg")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rw8a5"]
atlas = ExtResource("6_5gtgg")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwuka"]
atlas = ExtResource("6_5gtgg")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyqqp"]
atlas = ExtResource("6_5gtgg")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ds1xl"]
atlas = ExtResource("5_qek5x")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1u1sw"]
atlas = ExtResource("6_5gtgg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2t3bg"]
atlas = ExtResource("6_5gtgg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrbya"]
atlas = ExtResource("6_5gtgg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahqnk"]
atlas = ExtResource("6_5gtgg")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vb1ce"]
atlas = ExtResource("6_5gtgg")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ncpa"]
atlas = ExtResource("6_5gtgg")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_upxxc"]
atlas = ExtResource("6_5gtgg")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ln3h3"]
atlas = ExtResource("6_5gtgg")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uygh0"]
atlas = ExtResource("6_5gtgg")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1aof"]
atlas = ExtResource("6_5gtgg")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8qe1"]
atlas = ExtResource("6_5gtgg")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdvrm"]
atlas = ExtResource("6_5gtgg")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8afob"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h17s1")
}],
"loop": false,
"name": &"attack",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_je7p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fm80t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx1jg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugbui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcs02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myrg7")
}],
"loop": false,
"name": &"dash",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvlxm")
}],
"loop": false,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf5tr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgqa7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ydkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j4b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yj68g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioxgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnsyf")
}],
"loop": false,
"name": &"hit",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_007i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cv16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4nxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28m0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uniwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqsei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tffgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk8ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mf0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hvnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbmj2")
}],
"loop": true,
"name": &"idle",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qek5x")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxw46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qxvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q8fn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wva7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7obkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vo27k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_genst")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_niom3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttakn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rw8a5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwuka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyqqp")
}],
"loop": true,
"name": &"run",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ds1xl")
}],
"loop": true,
"name": &"shoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1u1sw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2t3bg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrbya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahqnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vb1ce")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ncpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upxxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln3h3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uygh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1aof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8qe1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdvrm")
}],
"loop": true,
"name": &"walk",
"speed": 16.0
}]

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_8afob")
has_acceleration = true
has_run = true
has_dash = true
has_shoot = true
aim_in_mouse = true
SHOOT_KNOCKBACK = 50.0
has_melee = true
MELEE_KNOCKBACK = 200.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dovo2")

[node name="dash_timer" type="Timer" parent="."]
one_shot = true

[node name="melle_attack_collision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="melle_attack_collision"]
position = Vector2(23.625, 0)
shape = SubResource("RectangleShape2D_8afob")
debug_color = Color(0.971741, 0, 0.445871, 0.42)

[node name="aim_shoot" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="knockback_timer" type="Timer" parent="."]

[node name="stun_timer" type="Timer" parent="."]

[node name="animation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8afob")
animation = &"attack"

[connection signal="body_entered" from="melle_attack_collision" to="." method="_on_melle_attack_collision_body_entered"]
[connection signal="body_exited" from="melle_attack_collision" to="." method="_on_melle_attack_collision_body_exited"]
